_rendered/apps/mosquitto/cilium_io-ciliumnetworkpolicy-mosquitto-preset-cnp.yaml
# Source: mosquitto/charts/mosquitto/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: mosquitto-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-assistant
        - matchLabels:
            io.kubernetes.pod.namespace: nodered
    - fromCIDR:
        - 10.0.0.0/20
        - fda0:f54f:5876::/48
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
    - fromEndpoints:
        - matchLabels:
            custom.network/mqtt-client: "egress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
